# src/app.ts
@@ -8,6 +8,7 @@ import connect from "./database/db";
 import userRoutes from "./routes/user.routes";
 import authRoutes from "./routes/auth.route";
 import customerRoutes from "./routes/customer.routes";
+import systemUserRoutes from "./routes/systemUser.routes";
 
 
 let swaggerFile: any;
@@ -48,6 +49,7 @@ if (swaggerFile) {
 app.use('/api/auth', authRoutes);
 app.use('/api/users', userRoutes);
 app.use('/api/customers', customerRoutes);
+app.use('/api/system-users', systemUserRoutes);
 
 // Root route redirect to API docs
 
